--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../src/rankometer.css">
 </head>
 <body>
+  <div id="demo-graph" style="width:800px"></div>
   <script>
     var data = {
       target: "Griffey Jr.",
@@ -14,13 +15,21 @@
           ["Griffey Jr.", "Rodriguez", "Bonds", "Knoblauch", "Bagwell",
            "Gilkey", "Gaminiti", "Thome", "McGwire", "Burks"],
           ["Biggio", "Walker", "Piazza", "Griffey Jr.", "Bonds",
-           "Bagwell", "Thomas", "Garciaparra", "Rodriguez", "Knoblauch"]
+           "Bagwell", "Thomas", "Garciaparra", "Rodriguez", "Knoblauch"],
+          ["Bonds", "McGwire", "Olerud", "Rodriguez", "Garciaparra",
+           "Belle", "Jones", "Sosa", "Jones", "Rolen"],
+          ["Bagwell", "Ramirez", "Jeter", "Ventura", "Alomar",
+           "Jones", "Jones", "Rodriguez", "Giles", "Gonzalez"],
+          ["Rodriguez", "Erstad", "Helton", "Glaus", "Giambi",
+           "Jones", "Bonds", "Garciaparra", "Kent", "Delgado"],
+          ["Bonds", "Sosa", "Giambi", "Gonzalez", "Rodriguez",
+           "Boone", "Walker", "Pujols", "Aurilia", "Helton"]
       ]
     };
 
     layout = {
-      width: 500,
-      height: 500,
+      width: 800,
+      height: 600,
       margin: {
         top: 0.1,
         bottom: 0.1,
@@ -29,6 +38,6 @@
       }
     }
 
-    plot("body", data, layout);
+    plot("#demo-graph", data, layout);
   </script>
 </body>
